<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="422dp"
        android:layout_height="59dp"
        android:background="@color/green2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="407dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/velou"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="186dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="Mejdi Hamma"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/title_of_your_post"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="66dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayoutDescription"
        android:layout_width="269dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:boxStrokeColor="@color/grey"
            app:hintTextColor="@color/grey"
            app:boxStrokeWidth="2dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="@color/grey"
               />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/descriptionn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/image_btn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginBottom="180dp"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/showimage"
        android:layout_width="313dp"
        android:layout_height="112dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="314dp"
        android:layout_height="133dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/private_box"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:text="@string/privet" />

        <RadioButton
            android:id="@+id/public_box"
            android:layout_width="307dp"
            android:layout_height="48dp"
            android:text="@string/publique" />

        <RadioButton
            android:id="@+id/friends_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/friends_only" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>